# SwarmRobot-OpenCR

./: main.ino
commandUtilities/: commands.cpp  commands.h  instructions.cpp
jetsonNano/: Dockerfile  docker-compose.dev.yaml  docker-compose.yaml
jetsonNano/ros2_ws/src/controller/: CMakeLists.txt  package.xml
jetsonNano/ros2_ws/src/controller/launch/: controller.launch.py
jetsonNano/ros2_ws/src/controller/src/: controller_node.cpp  instructions_node.cpp  movement_data_node.cpp
jetsonNano/ros2_ws/src/controller/urdf/: robomaster.urdf
main/: main.ino
opencrBoard/commandUtilities/: command_factory.cpp  command_factory.h  commands.cpp  instructions.h  instructions_mapping.cpp  instructions_mapping.h
opencrBoard/hardwareUtilities/: HCSR04.cpp  HCSR04.h  PING_sensor.cpp  PING_sensor.h
opencrBoard/libraries/can_bus/: can_bus.h
opencrBoard/libraries/circular_buffer/: buffer.cpp  buffer.h
opencrBoard/libraries/commands/: command_preprocessing.cpp  command_uploading.cpp  commands.cpp
opencrBoard/libraries/movement_data/: movement_data.h
opencrBoard/main/: main.ino  robomaster.ino
opencrBoard/micro_ros_nodes/: HCSR04_publisher.cpp  HCSR04_publisher.h  instructions_subscriber.cpp  instructions_subscriber.h  node_core.cpp  node_core.h
opencrBoard/micro_ros_nodes/hardwareUtilities/: HCSR04.cpp  HCSR04.h
opencrBoard/micro_ros_nodes/implementation/: HCSR04_publisher.cpp  HCSR04_publisher.h  (+2 more)
opencrBoard/robomaster/: robomaster.ino
opencrBoard/utilities/: checksum.h  error_check.cpp  error_check.h
utilities/: buffer.cpp  error_check.h
(+16 files in other folders)
